# watch-release

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: docker-image.yml
docker/: Dockerfile  config.json  docker-compose.yml
src/: cli.rs  config.rs  lib.rs  main.rs  shutdown.rs
src/db/: mod.rs
src/server/: mod.rs  watch.rs
src/server/alert/: mod.rs  slack.rs  wechat.rs
