[package]
name = "watch-release"
version = "0.1.3"
edition = "2021"
description = "watch github release"
authors = ["masayil"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1.0"
microkv = "0.2"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.3", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["rt-multi-thread","time","sync","macros","signal"] }
futures = "0.3.28"
bytes = "1"